  that your wiki's content or an extension is incompatible with the new markup.
  More information: https://www.mediawiki.org/wiki/Heading_HTML_changes
  This option will be removed in a future release.

==== Removed configuration ====

* wgResourceLoaderUseObjectCacheForDeps, deprecated in 1.43, has been removed.
  It is now always enabled (T343492).
* …

=== New user-facing features in 1.44 ===

* (T363538, T204792) New parser functions {{#interlanguagelink:prefix|title}}
  and {{#interwikilink:prefix|title|caption}} to unambiguously create
  interlanguage and interwiki links, respectively, even when the "prefix"
  might conflict with a namespace on the local wiki.
* (T326057) Attempting to create a redirect to a nonexistent page will now
  result in a warning.
* (T33951) The Interwiki extension has been moved to MediaWiki core. It is now
  possible to view and edit the interwiki table without installing an extension.
  $wgInterwikiCentralDB and $wgInterwikiCentralInterlanguageDB have been
  removed, use $wgVirtualDomainsMapping['virtual-interwiki'] and
  $wgVirtualDomainsMapping['virtual-interwiki-interlanguage'] instead.
  $wgInterwikiViewOnly has been removed, (un)assign "interwiki" right instead.
* …

=== New features for sysadmins in 1.44 ===

* (T267477) Users with rename userright can now rename themselves through
  [[Special:RenameUser]].
* …

=== New developer features in 1.44 ===

* The AuthenticationAttemptThrottled hook was added.
* The CodexTablePager class was added.
* UserFactory now has newFromNameOrIp() method to quickly create User object
  for either an IP a named user.
* The ApiQueryCheckCanExecute hook was added.
* …

=== External library changes in 1.44 ===

==== New external libraries ====

* …

===== New development-only external libraries =====

* …

==== Changed external libraries ====

* Updated codex, codex-design-tokens and codex-icons
  from v1.14.0 to v1.18.0.
* Updated wikimedia/bcp-47-code from 2.0.0 to 2.0.1.