@@ -152,8 +152,8 @@ config-schema:
             - 'null'
         description: |-
             Extensions directory in the file system.
-            @note Set to "{$IP}/extensions" by Setup.php before loading local settings.
-            @note this configuration variable is used to locate extensions while loading settings.
+            Defaults to "{$IP}/extensions" in Setup.php
+            @note This configuration variable is used to locate extensions while loading settings.
             @since 1.25
     StyleDirectory:
         default: null
@@ -162,18 +162,9 @@ config-schema:
             - 'null'
         description: |-
             Skins directory in the file system.
-            @note Set to "{$IP}/skins" by Setup.php before loading local settings.
-            @note this configuration variable is used to locate skins while loading settings.
+            Defaults to "{$IP}/skins" in Setup.php.
+            @note This configuration variable is used to locate skins while loading settings.
             @since 1.3
-    BaseDirectory:
-        default: null
-        description: |-
-            Absolute filesystem path of the root directory of the MediaWiki installation.
-            The MW_INSTALL_PATH environment variable can be used to set this.
-            @note Automatically set in Setup.php before loading local settings.
-            @note Do not modify in settings files! Must remain equal to the MW_INSTALL_PATH constant
-                  defined in Setup.php.
-            @since 1.38
     ArticlePath:
         default: false
         dynamicDefault:
@@ -211,10 +202,13 @@ config-schema:
             @since 1.36
     UploadDirectory:
         default: false
-        dynamicDefault:
-            use: [BaseDirectory]
-            callback: [MediaWiki\MainConfigSchema, getDefaultUploadDirectory]
-        description: 'The filesystem path of the images directory. Defaults to "{$IP}/images".'
+        type:
+            - string
+            - boolean
+            - 'null'
+        description: |-
+            The filesystem path of the images directory.
+            Defaults to "{$IP}/images" in Setup.php.
     FileCacheDirectory:
         default: false
         dynamicDefault:
