@@ -493,8 +493,9 @@ class MainConfigSchema {
 	/**
 	 * Extensions directory in the file system.
 	 *
-	 * @note Set to "{$IP}/extensions" by Setup.php before loading local settings.
-	 * @note this configuration variable is used to locate extensions while loading settings.
+	 * Defaults to "{$IP}/extensions" in Setup.php
+	 *
+	 * @note This configuration variable is used to locate extensions while loading settings.
 	 * @since 1.25
 	 */
 	public const ExtensionDirectory = [
@@ -505,26 +506,14 @@ class MainConfigSchema {
 	/**
 	 * Skins directory in the file system.
 	 *
-	 * @note Set to "{$IP}/skins" by Setup.php before loading local settings.
-	 * @note this configuration variable is used to locate skins while loading settings.
+	 * Defaults to "{$IP}/skins" in Setup.php.
+	 *
+	 * @note This configuration variable is used to locate skins while loading settings.
 	 * @since 1.3
 	 */
 	public const StyleDirectory = [
 		'default' => null,
 		'type' => '?string',
-	];
-
-	/**
-	 * Absolute filesystem path of the root directory of the MediaWiki installation.
-	 * The MW_INSTALL_PATH environment variable can be used to set this.
-	 *
-	 * @note Automatically set in Setup.php before loading local settings.
-	 * @note Do not modify in settings files! Must remain equal to the MW_INSTALL_PATH constant
-	 *       defined in Setup.php.
-	 * @since 1.38
-	 */
-	public const BaseDirectory = [
-		'default' => null,
 	];
 
 	/**
@@ -596,20 +585,14 @@ class MainConfigSchema {
 	];
 
 	/**
-	 * The filesystem path of the images directory. Defaults to "{$IP}/images".
+	 * The filesystem path of the images directory.
+	 *
+	 * Defaults to "{$IP}/images" in Setup.php.
 	 */
 	public const UploadDirectory = [
 		'default' => false,
-		'dynamicDefault' => [ 'use' => [ 'BaseDirectory' ] ]
+		'type' => '?string|false',
 	];
-
-	/**
-	 * @param mixed $baseDirectory Value of BaseDirectory
-	 * @return string
-	 */
-	public static function getDefaultUploadDirectory( $baseDirectory ): string {
-		return "$baseDirectory/images";
-	}
 
 	/**
 	 * Directory where the cached page will be saved.
